fix editor size too high

--- a/src/src/style.css
+++ b/src/src/style.css
@@ -584,7 +584,7 @@ textarea {
 }
 
 .d-editor-input {
-  min-height: 150px;
+  min-height: 40px;
   resize: none;
   font-size: 15px;
   caret-color: rgb(5, 5, 5);
